Fix for issue #1 and more ride details on the "live" page

--- a/src/main/webapp/live/index.html
+++ b/src/main/webapp/live/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="../style/live.css" />
 	<script src="../js/leaflet.js"></script>
 	<script src="../js/jquery-3.1.1.min.js"></script>
+	<script src="../js/moment.min.js"></script>
  
 	<meta charset="ISO-8859-1">
 	<title>Live train viewer</title>
